# docker-mini

./: 2023_10_17_dockerLog  Makefile  Makefile.bak  README.md  docker-run  docker.h  main.cpp
capi/: Makefile  container_api.c  container_api.h  image_api.c  image_api.h
client/grpc/: CMakeLists.txt  Makefile  client_base.h  container.grpc.pb.cc  container.grpc.pb.h  container.pb.cc  container.pb.h  container_client.cc  container_client.h  grpc_connect.cc  grpc_connect.h  image.grpc.pb.cc  image.grpc.pb.h  image.pb.cc  image.pb.h  image_client.cc  image_client.h
client/grpc/protos/: container.proto  image.proto
configs/: Makefile  config.c  config.h
http/: Makefile  http.c  http.h
libocispec/: Makefile  Makefile.bak  Makefile.bak1  Makefile.in  aclocal.m4  cni_anno_port_mappings.c  cni_anno_port_mappings.h  cni_inner_port_mapping.c  cni_inner_port_mapping.h  config.h  config.status  configs_constants.c  configs_constants.h  configure  container_config.c  container_config.h  container_inspect.c  container_inspect.h  container_network_settings.c  container_network_settings.h  defs.c  defs.h  defs.json  docker_image_config_v2.c  docker_image_config_v2.h  docker_image_history.c  docker_image_history.h  docker_image_rootfs.c  docker_image_rootfs.h  docker_types_mount_point.c  docker_types_mount_point.h  json_common.c  json_common.h  libocispec.la  libtool  network_port_binding.c  network_port_binding.h  oci_image_content_descriptor.c  oci_image_content_descriptor.h  oci_image_defs_descriptor.c  (+45 more)
libocispec/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
libocispec/configs/: constants.json
libocispec/container/: inspect.json
libocispec/storage/: layer.json
libocispec/tests/: test-1  test-10  test-11  test-2  (+7 more)
log/: Makefile  asynclog.c  asynclog.h  log.c  log.h
lxcapi/: Makefile  lxcapi.c  lxcapi.h
main/: .docker.cc.swp  Makefile  docker.cc  docker.h  main.cc  parse_cmd.cc  parse_cmd.h
net/: Makefile  network.c  nl.c  nl.h
registry/: Makefile  auths.c  auths.h  certs.c  registry.c  registry.h
storage/: Makefile  driver.c  driver.h  layer.c  layer.h  project_quota.c  project_quota.h  rootfs.c  rootfs.h  storage.c  storage.h
utils/: Makefile  af_unix.c  af_unix.h  archive.c  archive.h  fs.c  fs.h  io_wrapper.h  sha256.c  sha256.h  timestamp.c  timestamp.h  utils.c  utils.h
(+201 files in other folders)
